=======
CHANGES
=======
1.4.8 (unreleased)
------------------

1.4.7 (2009-05-27)
------------------
* update getpaid.formgen [larubbio]

1.4.6 (2009-05-26)
------------------
* Update getpaid.discount to resolve bug in 1.4.4 recipe [larubbio]

1.4.5 (2009-05-24)
------------------
* Update getpaid.discount [larubbio]

1.4.4 (2009-05-19)
------------------
* Update getpaid.formgen again to fix missing form fields [larubbio]
* Update Products.PloneGetPaid to shorten a translation [larubbio]

1.4.3 (2009-05-19)
------------------
* updated getpaid.formgen to 0.2.2 to include fix for zodb mount point bug [larubbio]

1.4.2 (2009-05-15)
------------------
* added getpaid.SalesforcePloneFormGenAdapter [larubbio]
* updated Products.PloneGetPaid, getpaid.core, getpaid.discount and 
  getpaid.formgen [larubbio]
* updated getpaid.paypal [lucielejard]

1.4.1 (2009-03-13)
------------------

* added getpaid.ogone, getpaid.formgen, getpaid.clickandbuy
* updated getpaid.authorizedotnet, getpaid.core, getpaid.paypal
  and Products.PloneGetPaid [lucielejard]


1.4 (2009-01-28)
----------------

* update the version for Products.PloneGetPaid, getpaid.warehouse and
  getpaid.discount
* added getpaid.payflowpro


1.3 (2009-01-19)
----------------

* update the version for Products.PloneGetPaid


1.2 (2008-12-31)
----------------

* update the version for: getpaid.core, Products.PloneGetPaid,
  five.intid, getpaid.googlecheckout, getpaid.paypal and
  getpaid.discount [lucielejard]
* added getpaid.report and getpaid.warehouse to the recipe
  [lucielejard]


1.1 (2008-11-24)
----------------

* moved the find-links into the recipe, so that we don't have
  to enter that into the buildout anymore [lucielejard]
* updated the version number of the GETPAID_BASE_PACKAGES
  [lucielejard]

1.0 (2008-10-15)
----------------

* added documentation to use the fake eggs
* added simplejson and ssl-for-setuptools in the recipe, since they are dependencies